welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (Math.abs(100-n) < 10)
^